...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="3Lc-6g-fCa" id="bb7-Ed-Af0"/>
                            <outlet property="delegate" destination="3Lc-6g-fCa" id="ah3-br-6tP"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Words Words WORDS" id="Slq-gW-KVh"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="bsn-Yd-pxs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-40.458015267175568" y="-47.183098591549296"/>
        </scene>
        <!--Navigation Controller-->
...
